# acode

./: .gitignore  .windsurfrules  README.md
acode-windows/: .gitignore  CMakeLists.txt  README.md  pubspec.yaml
acode-windows/lib/: main.dart
acode-windows/lib/app/: app_state.dart
acode-windows/lib/database/: database_manager.dart
acode-windows/lib/models/: file_node.dart  mcp_server.dart  provider.dart  skill.dart  split_node.dart  usage_tracker.dart
acode-windows/lib/services/: mcp_service.dart  provider_config_writer.dart  provider_env_generator.dart  provider_service.dart  skills_service.dart  update_checker.dart
acode-windows/lib/utils/: provider_icon_inference.dart  syntax_highlighter.dart
acode-windows/res/: app.manifest  app.rc
acode-windows/src/: app.c  app.h  main.c
acode-windows/src/database/: database.c  database.h
acode-windows/src/editor/: editor_tabs.c  editor_tabs.h  editor_view.c  editor_view.h  image_view.c  image_view.h  syntax.c  syntax.h  text_buffer.c  text_buffer.h
acode-windows/src/explorer/: file_node.c  file_node.h  file_tree.c  file_tree.h
acode-windows/src/provider/: config_writer.c  config_writer.h  env_generator.c  env_generator.h  provider.c  provider.h  provider_service.c  provider_service.h
acode-windows/src/services/: mcp.c  mcp.h  skills.c  skills.h  update_checker.c  update_checker.h  usage_tracker.c  usage_tracker.h
acode-windows/src/settings/: mcp_ui.c  mcp_ui.h  provider_form.c  provider_form.h  provider_ui.c  provider_ui.h  (+4 more)
acode-windows/test/: widget_test.dart
acode-windows/windows/: CMakeLists.txt
(+95 files in other folders)
